--- a/Paper Model/Paper Model.csproj
+++ b/Paper Model/Paper Model.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Node.cs" />
     <Compile Include="MinHeap.cs" />
     <Compile Include="Graph.cs" />
     <Compile Include="Program.cs" />
