--- a/.gitignore
+++ b/.gitignore
@@ -407,3 +407,8 @@ Paper Model/bin/Debug/Paper Model.pdb
 Paper Model/obj/Debug/Paper Model.exe
 Paper Model/obj/Debug/Paper Model.pdb
 Paper Model/obj/Debug/Paper Model.csproj.AssemblyReference.cache
+Paper Model/obj/Debug/Paper Model.exe
+Paper Model/obj/Debug/Paper Model.exe
+Paper Model/obj/Debug/Paper Model.csproj.AssemblyReference.cache
+Paper Model/bin/Debug/Paper Model.pdb
+Paper Model/bin/Debug/Paper Model.exe
